aws-migration/le-migration/12-vault/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app: vault
    project: linkedeye
    environment: prod
