aws-migration/le-migration/12-vault/06-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
    project: linkedeye
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /v1/sys/health?standbyok=true
spec:
  selector:
    app: vault
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      nodePort: 30200
    - name: cluster
      port: 8201
      targetPort: 8201
  type: NodePort
